# fuel-hedging-platform

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  render.yaml  setup_complete_implementation.sh
python_engine/: .dockerignore  =2.0.0  ALL_BUGS_FIXED.md  Dockerfile  Dockerfile.prod  FIXES_APPLIED.md  README.md  alembic.ini  docker-entrypoint.sh  manage.py  pyproject.toml  requirements-analytics.txt  requirements-core.txt  requirements.txt  test_analytics.py  test_full_analytics.py  test_implementation.py  test_phase_3.py  test_phase_4.py  test_phase_5.py  test_real_data.py  validate_startup.py
python_engine/alembic/: env.py  script.py.mako
python_engine/alembic/versions/: 001_initial_schema.py  002_add_backtest_runs.py  003_add_alerts_table.py  20260414_1542_6b35deb365c7_add_demand_strategy_config_keys.py  20260414_1740_9f2a1c4b8d11_expand_platform_config_keys.py  20260429_1004_3a2afd9c31af_make_position_recommendation_id_nullable.py
python_engine/app/: __init__.py  auth.py  config.py  constants.py  dependencies.py  exceptions.py  main.py
python_engine/app/analytics/: __init__.py  backtester.py  domain.py  protocols.py  scenarios.py
python_engine/app/clients/: __init__.py  base.py  eia.py  yfinance_client.py
python_engine/app/core/: security.py  units.py
python_engine/app/db/: __init__.py  base.py  models.py  seed.py
python_engine/app/repositories/: __init__.py  alerts.py  analytics.py  audit.py  base.py  config.py  market_data.py  positions.py  recommendation_repository.py  recommendations.py  users.py
python_engine/app/routers/: __init__.py  alerts.py  analytics.py  audit.py  auth.py  compliance.py  market_data.py  positions.py  recommendations.py  reports.py  stream.py
python_engine/app/schemas/: __init__.py  alerts.py  analytics.py  auth.py  common.py  market_data.py  recommendations.py
python_engine/app/services/: __init__.py  alert_service.py  analytics_pipeline.py  data_ingestion.py  data_source_manager.py  event_broker.py  external_apis.py  pipeline_runner.py  price_service.py  recommendation_service.py  (+5 more)
python_engine/scripts/: backfill_prices.py  seed_analytics_history.py
python_engine/tests/: __init__.py  test_recommendation_endpoints.py  test_recommendation_repository.py
(+184 files in other folders)
